--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
   "bracketSameLine": false,
   "jsxSingleQuote": false,
   "semi": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
