--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": ["./*"],
+      "@mui/material": ["./node_modules/@mui/joy"]
+    },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
