--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_EXTRA_CA_CERTS='C:/Users/jguil/root.crt' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,10 +17,10 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "negotiator": "0.6.3",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "prettier": "^3.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "zod": "^3.23.8"
   },
@@ -31,8 +31,9 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5"
