--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@formatjs/intl-localematcher": "0.2.32",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/joy": "^5.0.0-beta.36",
     "@supabase/ssr": "^0.3.0",
@@ -21,6 +22,7 @@
     "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "server-only": "^0.0.1",
     "zod": "^3.23.8"
   },
