Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,12 @@ trigger:
 pool: "Home Server"
 
 steps:
-
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+  - task: Cache@2
+    displayName: 'Cache .next/cache'
+    inputs:
+      key: next | $(Agent.OS) | yarn.lock
+      path: '$(System.DefaultWorkingDirectory)/.next/cache'
+  - script: |
+      npm install
+      npm run build
+    displayName: 'npm install and build'
