Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,16 +80,16 @@ stages:
         repository: 'thejguih/nextcondo'
         command: 'build'
         Dockerfile: '**/Dockerfile'
-        tags: 'beta-0.$(Build.BuildId)'
-    - task: Docker@2
-      displayName: 'Publish image to docker-hub'
-      inputs:
-        containerRegistry: 'azure'
-        repository: 'thejguih/nextcondo'
-        command: 'push'
-        tags: 'beta-0.$(Build.BuildId)'
-    - script: |
-        docker rmi thejguih/nextcondo:beta-0.$(Build.BuildId)
-      displayName: "Remove image from host"
+        tags: ${Build.SourceBranchName}
+    # - task: Docker@2
+    #   displayName: 'Publish image to docker-hub'
+    #   inputs:
+    #     containerRegistry: 'azure'
+    #     repository: 'thejguih/nextcondo'
+    #     command: 'push'
+    #     tags: 'beta-0.$(Build.BuildId)'
+    # - script: |
+    #     docker rmi thejguih/nextcondo:beta-0.$(Build.BuildId)
+    #   displayName: "Remove image from host"
     
 
