Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,7 @@ stages:
 
 - stage: buildDockerImage
   dependsOn: build
+  condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
   jobs:
   - job: run_buildDockerImage
     pool: "Home Server"
@@ -83,15 +84,20 @@ stages:
         tags: |
           ${Build.SourceBranchName}
           latest
-    # - task: Docker@2
-    #   displayName: 'Publish image to docker-hub'
-    #   inputs:
-    #     containerRegistry: 'azure'
-    #     repository: 'thejguih/nextcondo'
-    #     command: 'push'
-    #     tags: 'beta-0.$(Build.BuildId)'
-    # - script: |
-    #     docker rmi thejguih/nextcondo:beta-0.$(Build.BuildId)
-    #   displayName: "Remove image from host"
+    - task: Docker@2
+      displayName: 'Publish image to docker-hub'
+      inputs:
+        containerRegistry: 'azure'
+        repository: 'thejguih/nextcondo'
+        command: 'push'
+        tags: |
+          ${Build.SourceBranchName}
+          latest
+    - script: |
+        docker rmi thejguih/nextcondo:${Build.SourceBranchName}
+      displayName: "Remove image ${Build.SourceBranchName} from host"
+    - script: |
+        docker rmi thejguih/nextcondo:latest
+      displayName: "Remove image latest from host"
     
 
