--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,47 +57,51 @@ stages:
   dependsOn: build
   condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
   jobs:
-  - job: run_buildDockerImage
-    pool: "Home Server"
-    steps:
-    - download: current
-      artifact: nextapp
-    - task: CopyFiles@2
-      displayName: 'Copy nextapp/standalone to working directory'
-      inputs:
-        SourceFolder: '$(Pipeline.Workspace)/nextapp/standalone'
-        Contents: '**'
-        TargetFolder: '.next/standalone'
-    - task: CopyFiles@2
-      displayName: 'Copy nextapp/static to working directory'
-      inputs:
-        SourceFolder: '$(Pipeline.Workspace)/nextapp/static'
-        Contents: '**'
-        TargetFolder: '.next/static'
-    - task: Docker@2
-      displayName: 'Build docker image'
-      inputs:
-        containerRegistry: 'azure'
-        repository: 'thejguih/nextcondo'
-        command: 'build'
-        Dockerfile: '**/Dockerfile'
-        tags: |
-          $(Build.SourceBranchName)
-          latest
-    - task: Docker@2
-      displayName: 'Publish image to docker-hub'
-      inputs:
-        containerRegistry: 'azure'
-        repository: 'thejguih/nextcondo'
-        command: 'push'
-        tags: |
-          $(Build.SourceBranchName)
-          latest
-    - script: |
-        docker rmi thejguih/nextcondo:$(Build.SourceBranchName)
-      displayName: "Remove image $(Build.SourceBranchName) from host"
-    - script: |
-        docker rmi thejguih/nextcondo:latest
-      displayName: "Remove image latest from host"
-    
-
+  - deployment: 
+    displayName: "Docker image deployt"
+    environment:
+      name: nextcondo
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - checkout: self
+          - download: current
+            artifact: nextapp
+          - task: CopyFiles@2
+            displayName: 'Copy nextapp/standalone to working directory'
+            inputs:
+              SourceFolder: '$(Pipeline.Workspace)/nextapp/standalone'
+              Contents: '**'
+              TargetFolder: '.next/standalone'
+          - task: CopyFiles@2
+            displayName: 'Copy nextapp/static to working directory'
+            inputs:
+              SourceFolder: '$(Pipeline.Workspace)/nextapp/static'
+              Contents: '**'
+              TargetFolder: '.next/static'
+          - task: Docker@2
+            displayName: 'Build docker image'
+            inputs:
+              containerRegistry: 'azure'
+              repository: 'thejguih/nextcondo'
+              command: 'build'
+              Dockerfile: '**/Dockerfile'
+              tags: |
+                $(Build.SourceBranchName)
+                latest
+          - task: Docker@2
+            displayName: 'Publish image to docker-hub'
+            inputs:
+              containerRegistry: 'azure'
+              repository: 'thejguih/nextcondo'
+              command: 'push'
+              tags: |
+                $(Build.SourceBranchName)
+                latest
+          - script: |
+              docker rmi thejguih/nextcondo:$(Build.SourceBranchName)
+            displayName: "Remove image $(Build.SourceBranchName) from host"
+          - script: |
+              docker rmi thejguih/nextcondo:latest
+              displayName: "Remove image latest from host"
