Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ stages:
   - deployment: 
     displayName: "Deploy Docker Image"
     environment:
-      name: nextcondo
+      name: nextcondo-frontend
     strategy:
       runOnce:
         deploy:
