--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/joy": "^5.0.0-beta.36",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
+    "jest-junit": "^16.0.0",
     "negotiator": "0.6.3",
     "next": "^14.2.5",
     "prettier": "^3.2.5",
