--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ stages:
         failTaskOnMissingResultsFile: true
 
 - stage: deploy
-  dependsOn: build
+  dependsOn: test
   condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
   jobs:
   - deployment: 
