--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,13 +26,13 @@ stages:
       inputs:
         command: 'install'
         workingDir: '$(System.DefaultWorkingDirectory)'
-      displayName: 'install dependencies'
+      displayName: 'Install dependencies'
     - task: Npm@1
       inputs:
         command: 'custom'
         workingDir: '$(System.DefaultWorkingDirectory)'
         customCommand: 'build'
-      displayName: 'npm build'
+      displayName: 'Build app'
     - task: CopyFiles@2
       displayName: 'Copy .next/standalone to staging directory'
       inputs:
