Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,6 +101,7 @@ stages:
               SourceFolder: '$(Pipeline.Workspace)/nextapp'
               Contents: '**'
               TargetFolder: '$(System.DefaultWorkingDirectory)/release'
+              CleanTargetFolder: true
           - task: Docker@2
             displayName: 'Build docker image'
             inputs:
