--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,19 +36,22 @@ stages:
     - task: CopyFiles@2
       displayName: 'Copy .next/standalone to staging directory'
       inputs:
-        Contents: '$(System.DefaultWorkingDirectory)/.next/standalone/**'
+        SourceFolder: '$(System.DefaultWorkingDirectory)/.next/standalone'
+        Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     # The following two folders needs to be copied over manualy, see https://nextjs.org/docs/app/api-reference/next-config-js/output
     - task: CopyFiles@2
       displayName: 'Copy public folder to staging directory'
       inputs:
-        Contents: '$(System.DefaultWorkingDirectory)/public/**'
+        SourceFolder: '$(System.DefaultWorkingDirectory)/public'
+        Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)/public'
     # Static folder is deprecated, see https://nextjs.org/docs/messages/static-dir-deprecated
     - task: CopyFiles@2
       displayName: 'Copy .next/static to staging directory'
       inputs:
-        Contents: '$(System.DefaultWorkingDirectory)/.next/static/**'
+        SourceFolder: '$(System.DefaultWorkingDirectory)/.next/static'
+        Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)/public/static'
     - publish: '$(Build.ArtifactStagingDirectory)'
       displayName: 'Publish Nextapp'
