--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,7 +55,7 @@ stages:
         TargetFolder: '$(System.DefaultWorkingDirectory)/staging/public/static'
     - task: PublishPipelineArtifact@1
       inputs:
-        targetPath: '$(System.DefaultWorkingDirectory)/pipeline-release'
+        targetPath: '$(System.DefaultWorkingDirectory)/staging'
         artifact: 'nextapp'
         publishLocation: 'pipeline'
     
