--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-config-next": "^14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "sass": "^1.77.8",
     "typescript": "^5.4.5"
   }
 }
