--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.77.8",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": "20.16.0"
   }
 }
