--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "0.2.32",
-    "@hookform/resolvers": "^3.9.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "jest-junit": "^16.0.0",
@@ -27,6 +26,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.7",
     "@types/negotiator": "0.6.1",
@@ -40,6 +40,7 @@
     "eslint-config-next": "^14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.3.5",
     "sass": "^1.77.8",
     "typescript": "^5.4.5"
   },
