--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "0.2.32",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
-    "jest-junit": "^16.0.0",
     "negotiator": "0.6.3",
     "next": "^14.2.5",
     "prettier": "^3.2.5",
@@ -40,6 +40,7 @@
     "eslint-config-next": "^14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "msw": "^2.3.5",
     "sass": "^1.77.8",
     "typescript": "^5.4.5"
