--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,6 @@
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:@typescript-eslint/strict", "next/core-web-vitals"],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
+  "ignorePatterns":["*.test.*"],
   "root": true
 }
