--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest --verbose",
     "test:unit": "jest --verbose --testPathPattern=__tests__/unit",
     "test:unit:watch": "jest --watch --testPathPattern=__tests__/unit",
-    "test:integration": "jest --verbose --testPathPattern=__tests__/integration"
+    "test:integration": "jest --verbose --testPathPattern=__tests__/integration",
+    "prepare": "husky"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "0.2.32",
@@ -32,11 +33,12 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.6",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
