--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --verbose",
-    "test:unit": "jest --verbose --testPathPattern=__tests__/unit",
-    "test:unit:watch": "jest --watch --testPathPattern=__tests__/unit",
+    "test": "jest --verbose --testPathPattern=__tests__/unit",
+    "test:watch": "jest --watch --testPathPattern=__tests__/unit",
     "test:integration": "jest --verbose --testPathPattern=__tests__/integration",
     "prepare": "husky"
   },
