Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ stages:
 
   - stage: deploy
     dependsOn: test
-    condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+    condition: and(startsWith(variables['Build.SourceBranch'], 'refs/tags/'), succeeded())
     jobs:
       - deployment:
         displayName: "Deploy docker image"
