--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "0.2.32",
+    "client-only": "^0.0.1",
     "negotiator": "0.6.3",
     "next": "^14.2.6",
     "prettier": "^3.2.5",
